--- a/src/assets/scss/components/_social-link.scss
+++ b/src/assets/scss/components/_social-link.scss
@@ -1,14 +1,6 @@
 /*-----------------------------------------------------------------------------------------------------
-    [Grid]
+    [social-link]
 -------------------------------------------------------------------------------------------------------*/
-.container {
-  padding: 0 10px;
-  max-width: $max-width;
-  margin: 0 auto;
-}
 
-/*
-* [TODO] Flexbox
-*/
-
+.social-link {}
 
