--- a/src/assets/scss/global/_colors.scss
+++ b/src/assets/scss/global/_colors.scss
@@ -3,17 +3,18 @@
 -------------------------------------------------------------------------------------------------------*/
 
 /* Application colors */
-$primary          : #B00834;
-$secondary        : #4B4A4D;
-$tertiary         : #99CC00;
-$selection        : #cccccc;
+$primary          : #333333;
+$secondary        : #666666;
+$tertiary         : #999999;
+$selection        : #FF9A00;
+$border-color     : #efefef;
 
         
 /* Typography colors */
-$body-bg          : #FFFFFF;
-$body-font        : #000000;
-$body-font-alt    : #999999;
-$title-font       : #000000;
+$bg-color          : #FFFFFF;
+$text-color        : #000000;
+$text-color-alt    : #666666;
+$title-color       : #000000;
 
 
 /* Shades of grey */
