--- a/src/assets/scss/global/_helpers.scss
+++ b/src/assets/scss/global/_helpers.scss
@@ -26,3 +26,19 @@
     display: block !important;
   }
 }
+
+.txtleft { 
+  text-align: left; 
+}
+
+.txtright { 
+  text-align: right; 
+}
+
+.txtcenter { 
+  text-align: center; 
+}
+
+.hidden {
+  visibility: hidden;
+}
