--- a/src/assets/scss/layout/_page.scss
+++ b/src/assets/scss/layout/_page.scss
@@ -1,14 +1,6 @@
 /*-----------------------------------------------------------------------------------------------------
-    [Grid]
+    [page]
 -------------------------------------------------------------------------------------------------------*/
-.container {
-  padding: 0 10px;
-  max-width: $max-width;
-  margin: 0 auto;
-}
 
-/*
-* [TODO] Flexbox
-*/
-
-
+.main {}
+	
