--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -1,8 +1,16 @@
-		<nav role="navigation" class="main-menu">
-			<ul>
-				<li><a href="#">Item 01</a></li>
-				<li><a href="#">Item 02</a></li>
-				<li><a href="#">Item 03</a></li>
-				<li><a href="#">Item 04</a></li>
-			</ul>
-		</nav>
+		<div class="container">
+			<a class="logo" href="index.html">
+				<img src="/assets/img/logo.svg" width="" height="" alt="Logo" onerror="this.removeAttribute('onerror'); this.src='/assets/img/logo.png" />
+			</a>
+			<button class="menu-btn" data-content="nav-content"><i class="icon-menu"></i><span aria-hidden="true">Menu</span></button>
+			<div class="nav-content">
+				<button class="menu-close-btn" data-content="nav-content"><i class="icon-close"></i><span aria-hidden="true">Fermer</span></button>
+				<nav role="navigation" class="main-menu">
+					<ul>
+						<li><a href="index.html">Accueil</a></li>
+						<li><a href="#">Item</a></li>
+						<li><a href="#">Item</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
