--- a/src/assets/scss/global/_commons.scss
+++ b/src/assets/scss/global/_commons.scss
@@ -2,57 +2,46 @@
     [commons]
 -------------------------------------------------------------------------------------------------------*/
 
-* {-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-/*
-::-webkit-selection { background : #ccc; }
-::-moz-selection { background : #ccc; }
-::selection { background : #ccc; }
-*/
+/*::-webkit-selection { background : $selection; }
+::-moz-selection { background : $selection; }
+::selection { background : $selection; }*/
 
+html {
+  font-size: .625em; /* fallback IE8+ */
+  font-size: calc(1em * .625); /* IE9-IE11 math fixing. See http://bit.ly/1g4X0bX */
+}
 body {  
-  background: #FFF; 
+  background: $bg-color; 
+  font-size: 1.4em; /* base font-size is equivalent "14px" */
 }
 
-a { 
-  text-decoration: none; 
-  color: #000; 
+a[href]:not([class]) {
+  color: $text-color; 
+  text-decoration: underline; 
+  transition: color 200ms;
   &:hover { 
     color: $primary;
-    text-decoration: underline; 
+    //text-decoration: none; 
   }
 }
 
-ul, 
+ul,
 ol { 
-  margin: 0 0 24px 20px;
+  margin: 0;
+  li {
+    margin: 0;
+    list-style: none;
+  }
 }
-
-ul ul { 
-  margin: 0 0 0 20px;
-}
-
-ul li,
-ol li{
-  line-height: 180%;
-  margin-bottom: 20px;
-}
-
-ol {}
-
-p {}
 
 img { 
   height: auto; 
   max-width: 100%; 
   display: block;
-  @include mq(small) {
-    width: 100%;
-    max-width: 100%;
-  }
 }
 
 blockquote {
-  color: $body-font;
+  color: $text-color;
   font-style: italic;
   font-family: $georgia;
   font-size: 18px;
@@ -88,25 +77,6 @@ table {
     padding: 0.2em;
   }
 }
-
-.txtleft { 
-  text-align: left; 
-}
-
-.txtright { 
-  text-align: right; 
-}
-
-.txtcenter { 
-  text-align: center; 
-}
-
-.hidden {
-  visibility: hidden;
-}
-
-.main {}
-.wrapper {}
 
 
 
