--- a/src/assets/scss/global/_reset.scss
+++ b/src/assets/scss/global/_reset.scss
@@ -5,6 +5,12 @@
     v2.0 | 20110126
     License: none (public domain)    
 -------------------------------------------------------------------------------------------------------*/
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -31,7 +37,7 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 body {
-  line-height: 1;
+  line-height: 1.5;
 }
 ol, ul {
   /*list-style: none;*/
