--- a/src/assets/scss/helpers/_mixins.scss
+++ b/src/assets/scss/helpers/_mixins.scss
@@ -2,14 +2,40 @@
     [mixins]
 -------------------------------------------------------------------------------------------------------*/
 
-@mixin mq($bp){
-  @media #{map-get($bps, $bp)} {
-    @content;
+@mixin mq($max: 0, $min: 0) {
+  $type: type-of($min);
+  
+  @if $type == string {
+    @if $max == xsmall { 
+      @media (max-width: $xsmall) { @content; }       // Mobile Devices
+    }
+    
+    @else if $max == small {
+      @media (max-width: $small) { @content; }       // Tablet Devices
+    }
+    
+    @else if $max == medium {
+      @media (max-width: $medium ) { @content; }       // Desktops
+    }
+    
+    @else if $max == large {
+      @media (max-width: $large) { @content; }      // Widescreen Desktops
+    }
+    @else if $max == xlarge {
+      @media (max-width: $xlarge ) { @content; }      // Widescreen Desktops
+    }
+  
+    // Otherwise pass a warning to the compiler as to the appropriate options
+    @else {
+      @warn "The breakpoint mixin supports the following attributes: xsmaa, small, medium, large, xlarge";
+    }
   }
-}
-
-@mixin grid_reset() {
-  width: auto;
-  margin: 0; 
-  float: none;
+  @else if $type == number {
+    // Allow for custom parameters for min and max size
+    $query: "all" !default;
+    @if      $min != 0 and $max != 0 { $query: "(min-width: #{$min}) and (max-width: #{$max})"; } // set both min and max
+    @else if $min != 0 and $max == 0 { $query: "(min-width: #{$min})"; } // set just min
+    @else if $min == 0 and $max != 0 { $query: "(max-width: #{$max})"; } // set just max
+    @media #{$query} { @content; }
+  }
 }
